Utils/AutoZoom/Utils/emICCD/Final MonoControl 5.2.4 install/SpectraPro_SDK/ARC_SpectraPro_SDK/VC++_Examples/Setup_Example/ARC_SpectraPro_dll.h

// function definitions
typedef unsigned _int16 (CALLBACK* LPFNDLL_Ver) (long &, long &, long &);
//Communications
typedef unsigned _int16 (CALLBACK* LPFNDLL_Search_For_Mono) (long &);
typedef unsigned _int16 (CALLBACK* LPFNDLL_Open_Mono) (long,long &);
typedef unsigned _int16 (CALLBACK* LPFNDLL_Open_Mono_Port) (long, long &);
typedef unsigned _int16 (CALLBACK* LPFNDLL_Close_Mono) (long);
typedef unsigned _int16 (CALLBACK* LPFNDLL_Valid_Mono_Enum) (long);
//Information
typedef unsigned _int16 (CALLBACK* LPFNDLL_get_Mono_Model_CString) (long, char &);
typedef unsigned _int16 (CALLBACK* LPFNDLL_get_Mono_Serial_CString) (long, char &);
typedef unsigned _int16 (CALLBACK* LPFNDLL_get_Mono_Focallength) (long, double &);
typedef unsigned _int16 (CALLBACK* LPFNDLL_get_Mono_Precision) (long);
//Wavelength
typedef unsigned _int16 (CALLBACK* LPFNDLL_get_Mono_Wavelength_nm) (long, double &);
typedef unsigned _int16 (CALLBACK* LPFNDLL_set_Mono_Wavelength_nm) (long, double);
typedef unsigned _int16 (CALLBACK* LPFNDLL_get_Mono_Wavelength_Cutoff_nm) (long, double &);
typedef unsigned _int16 (CALLBACK* LPFNDLL_get_Mono_Wavelength_Min_nm) (long, double &);
typedef unsigned _int16 (CALLBACK* LPFNDLL_get_Mono_Turret_Gratings) (long, long &);
typedef unsigned _int16 (CALLBACK* LPFNDLL_get_Mono_Grating) (long, long &);
typedef unsigned _int16 (CALLBACK* LPFNDLL_set_Mono_Grating) (long, long);
typedef unsigned _int16 (CALLBACK* LPFNDLL_get_Mono_Grating_Density) (long, long, long &);
typedef unsigned _int16 (CALLBACK* LPFNDLL_get_Mono_Slit_Width) (long, long, long &);
typedef unsigned _int16 (CALLBACK* LPFNDLL_set_Mono_Slit_Width) (long, long, long);
// Scan Values
typedef unsigned _int16 (CALLBACK* LPFNDLL_get_Mono_Scan_Rate_nm_min)  (long, double &);
typedef unsigned _int16 (CALLBACK* LPFNDLL_set_Mono_Scan_Rate_nm_min)  (long, double);
typedef unsigned _int16 (CALLBACK* LPFNDLL_Mono_Start_Scan_To_nm)  (long, double);
typedef unsigned _int16 (CALLBACK* LPFNDLL_Mono_Scan_Done)  (long, long &, double);
LPFNDLL_Ver ARC_Ver;       // function pointer to ARC_Ver
//Communications
LPFNDLL_Search_For_Mono                ARC_Search_For_Mono;
LPFNDLL_Open_Mono                      ARC_Open_Mono;
LPFNDLL_Open_Mono_Port                 ARC_Open_Mono_Port;
LPFNDLL_Close_Mono                     ARC_Close_Mono;
LPFNDLL_Valid_Mono_Enum                ARC_Valid_Mono_Enum;
//Information
LPFNDLL_get_Mono_Model_CString         ARC_get_Mono_Model_CString;
LPFNDLL_get_Mono_Serial_CString        ARC_get_Mono_Serial_CString;
LPFNDLL_get_Mono_Focallength           ARC_get_Mono_Focallength;
LPFNDLL_get_Mono_Precision             ARC_get_Mono_Precision;
//Wavelength
LPFNDLL_get_Mono_Wavelength_nm         ARC_get_Mono_Wavelength_nm;
LPFNDLL_set_Mono_Wavelength_nm         ARC_set_Mono_Wavelength_nm;
LPFNDLL_get_Mono_Wavelength_Cutoff_nm  ARC_get_Mono_Wavelength_Cutoff_nm;
LPFNDLL_get_Mono_Wavelength_Min_nm     ARC_get_Mono_Wavelength_Min_nm;
LPFNDLL_get_Mono_Turret_Gratings       ARC_get_Mono_Turret_Gratings;
LPFNDLL_get_Mono_Grating               ARC_get_Mono_Grating;
LPFNDLL_set_Mono_Grating               ARC_set_Mono_Grating;
LPFNDLL_get_Mono_Grating_Density       ARC_get_Mono_Grating_Density;
LPFNDLL_get_Mono_Slit_Width            ARC_get_Mono_Slit_Width;
LPFNDLL_set_Mono_Slit_Width            ARC_set_Mono_Slit_Width;
// Scan Values
LPFNDLL_get_Mono_Scan_Rate_nm_min      ARC_get_Mono_Scan_Rate_nm_min;
 
LPFNDLL_set_Mono_Scan_Rate_nm_min      ARC_set_Mono_Scan_Rate_nm_min;
 
LPFNDLL_Mono_Start_Scan_To_nm          ARC_Mono_Start_Scan_To_nm;
LPFNDLL_Mono_Scan_Done                 ARC_Mono_Scan_Done;